fix schedule height being restricted on mobile

--- a/frontend/src/components/scss/schedule.scss
+++ b/frontend/src/components/scss/schedule.scss
@@ -5,7 +5,9 @@
 }
 
 .schedule-height {
-  height: calc(100vh - #{$nav-height});
+  @media (min-width: $small) {
+    height: calc(100vh - #{$nav-height});
+  }
 }
 
 .new-container {
